--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,10 +88,12 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:1.4.3"
     implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
     implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
 
     // Paging3
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+    implementation "androidx.paging:paging-compose:3.2.0-rc01"
+
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
@@ -139,6 +141,8 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "org.mockito:mockito-inline:2.28.2"
     testImplementation "androidx.room:room-testing:2.5.2"
+    testImplementation "androidx.paging:paging-common:3.1.1"
+
 
     // Instrumentation tests
     androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
